syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/bridge";

package bridge;

service DownloadData {
    rpc DownloadThumbnail(DownloadThumbnailRequest) returns (DownloadThumbnailReply);
    rpc DownloadDDAndFingerprints(DownloadDDAndFingerprintsRequest) returns (DownloadDDAndFingerprintsReply);
}

message DownloadThumbnailRequest {
    string txid = 1;
    int32 numnails = 2;
}

message DownloadThumbnailReply {
    bytes thumbnailone = 1;
    bytes thumbnailtwo = 2;
}

message DownloadDDAndFingerprintsRequest {
    string txid = 1;
}

message DownloadDDAndFingerprintsReply {
    bytes file = 1;
}
